@@ -1251,7 +1251,7 @@ static int read_one_map(struct autofs_point *ap,
 			goto next;
 
 		cache_writelock(mc);
-		cache_update(mc, source, s_key, mapent, age);
+		cache_update(mc, s_key, mapent, age);
 		cache_unlock(mc);
 
 		free(s_key);
@@ -1463,7 +1463,7 @@ static int lookup_one(struct autofs_point *ap,
 				goto next;
 			wild = 1;
 			cache_writelock(mc);
-			cache_update(mc, source, "*", mapent, age);
+			cache_update(mc, "*", mapent, age);
 			cache_unlock(mc);
 			goto next;
 		}
@@ -1473,7 +1473,7 @@ static int lookup_one(struct autofs_point *ap,
 			goto next;
 
 		cache_writelock(mc);
-		ret = cache_update(mc, source, s_key, mapent, age);
+		ret = cache_update(mc, s_key, mapent, age);
 		cache_unlock(mc);
 
 		free(s_key);
@@ -1517,7 +1517,7 @@ static int check_map_indirect(struct autofs_point *ap,
 
 	cache_readlock(mc);
 	exists = cache_lookup_distinct(mc, key);
-	if (exists && exists->source != source)
+	if (exists && exists->mc != mc)
 		exists = NULL;
 	cache_unlock(mc);
 
@@ -1613,7 +1613,7 @@ int lookup_mount(struct autofs_point *ap, const char *name, int name_len, void *
 	 * the map cache already we never get a mount lookup, so
 	 * we never know about it.
 	 */
-	if (ap->type == LKP_INDIRECT) {
+	if (ap->type == LKP_INDIRECT && *key != '/') {
 		char *lkp_key;
 
 		cache_readlock(mc);
@@ -1665,7 +1665,7 @@ int lookup_mount(struct autofs_point *ap, const char *name, int name_len, void *
 			cache_writelock(mc);
 			me = cache_lookup_distinct(mc, key);
 			if (!me)
-				rv = cache_update(mc, source, key, NULL, now);
+				rv = cache_update(mc, key, NULL, now);
 			if (rv != CHE_FAIL) {
 				me = cache_lookup_distinct(mc, key);
 				me->status = now + NEGATIVE_TIMEOUT;
